# findit

./: .markdownlint.yaml  Cargo.toml  LICENSE  README.md  build
.github/workflows/: coverage.yaml  push.yaml  release.yaml
docker/: Dockerfile
docs/: cookbook.md  install.md  quick-start.md  usage.md
docs/syntax/: access.md  index.md
docs/syntax/expressions/: between.md  case.md  class.md  if.md  list.md  with.md
docs/syntax/literals/: bools.md  dates.md  numbers.md  paths.md  string.md
docs/syntax/method/: debug.md
src/: between.rs  binary_operator.rs  class_type.rs  cli_args.rs  debugger.rs  errors.rs  expr.rs  extract.rs  file_wrapper.rs  filter.rs  is_check.rs  lazy_list.rs  lib.rs  limit.rs  literal_value.rs  main.rs  min_depth.rs  order.rs  output.rs  quick_ref.rs  run_func.rs  string_functions.rs  unary_operators.rs  value.rs  walker.rs
src/evaluators/: between.rs  binary_operator.rs  binding.rs  cast.rs  class_access.rs  class_definition.rs  expr.rs  extract.rs  is_check.rs  list.rs  literal_value.rs  method_invocation.rs  mod.rs  unary_operators.rs  with.rs
src/evaluators/functions/: env.rs  into.rs  mod.rs  string_functions.rs
src/evaluators/method_invocation/: all.rs  any.rs  avg.rs  contains.rs  debug.rs  distinct.rs  enumerate.rs  filter.rs  first.rs  flat_map.rs  group_by.rs  join.rs  (+24 more)
src/functions/: env.rs  into.rs  mod.rs
src/parser/: access.rs  between.rs  binary_expression.rs  case.rs  cast.rs  define_class.rs  execute.rs  expression.rs  format.rs  function.rs  function_name.rs  if_expression.rs  is_check.rs  lexer.rs  literal_list.rs  method.rs  mod.rs  negate.rs  operator.rs  order_by.rs  parse_date.rs  parser_error.rs  position.rs  replace.rs  self_divide.rs  span.rs  substr.rs  tokens.rs  with.rs
tests/: integration_tests.rs
(+554 files in other folders)
