[package]
name = "findit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
chrono = "0.4"
sqlparser = "0.58"
itertools = "0.14"
regex = "1.11"
uzers  = "0.12"

[dev-dependencies]
toml = "0.9"

[workspace.metadata.typos]
files.extend-exclude = [
    "tests/test_cases/**/*.txt",
    "tests/test_cases/**/*.bash",
]
