[package]
name = "findit-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple and powerful command line utility that can be used to search for files in a directory hierarchy as an alternative to `find`."
homepage = "https://github.com/yift/findit"
repository = "https://github.com/yift/findit"
documentation = "https://github.com/yift/findit/blob/main/README.md"
readme = "README.md"
exclude = ["/.github/*", "/.gitignore"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
chrono = "0.4"
itertools = "0.14"
regex = "1.12"
uzers  = "0.12"
rand = "0.9"
ordermap = "1.0"

[dev-dependencies]
toml = "0.9"
tempfile = "3.23"

[workspace.metadata.typos]
files.extend-exclude = [
    "tests/test_cases/**/*.txt",
    "tests/test_cases/**/*.bash",
]

[[bin]]
name = "findit"
path = "src/main.rs"